--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
       </main>
 
       <footer class="footer">
-        <span>© <span id="year"></span> Your Name. All rights reserved.</span>
+        <span>© <span id="year"></span> ALIYAN SALEEM. All rights reserved.</span>
       </footer>
     </div>
 
